--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
   },
   "scripts": {
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
