--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@
 !/app/assets/builds/.keep
 
 /node_modules
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+/.env
